# Gms-Compiler

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  aarch64.c  amd64.c  asmgen.c  asmgen.h  debugutil.c  err.c  err.h  intercode.c  intercode.h  intercode2.c  intercode2.h  lexer.c  lexer.h  main.c  parser.c  parser.h  preprocess.c  preprocess.h  reference.md  sematic.c  sematic.h  status.c  status.h  utils.c  utils.h
log/: 260105.md  260106.md  260107.md  260108.md  260109.md  260110.md  260113.md  260115.md  260116.md  260117.md  260118.md  260119.md  260120.md
tool/: gen.c
