cmake_minimum_required(VERSION 3.10)
project(GMS_COMPILER)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_C_COMPILER gcc)
aux_source_directory(. SRC_LIST)
add_executable(GMS_COMPILER ${SRC_LIST})
target_compile_options(GMS_COMPILER PRIVATE -std=c11 -g -gdwarf-4 -Wall -Wextra -DDEBUG  -fno-omit-frame-pointer -O0 -D_AMD64)
if(CMAKE_HOST_UNIX)
elseif(CMAKE_HOST_WIN32)
  add_compile_options(-D_AMD64)
endif()
target_link_options(GMS_COMPILER PRIVATE)

